# mr

./: .gitattributes  .gitignore  README.md  build.sbt  unnamed.patch
binary/src/main/scala/ru/kryptonite/commons/binary/: ArrayBinary.scala  ArrayWriter.scala  Binary.scala  BinaryInputStream.scala  BinaryReader.scala  ByteBufferBinary.scala  Reader.scala  StreamWriter.scala  Writer.scala
binary/src/test/scala/ru/kryptonite/commons/binary/: ArrayBinarySpec.scala  ArrayWriterSpec.scala  BinaryBehaviors.scala  ByteBufferBinarySpec.scala  WriterBehaviors.scala
commons/src/main/scala/ru/kryptonite/commons/io/: ResourceLoader.scala
commons/src/main/scala/ru/kryptonite/commons/util/: CloseableOps.scala
fvad/native/: CMakeLists.txt  build-native.sh
fvad/native/docker/: Dockerfile  run-build.sh
fvad/native/src/: ru_kryptonite_audio_fvad_FVad.cpp  ru_kryptonite_audio_fvad_FVad.h
fvad/native/src/util/: jlocks.h
fvad/src/main/resources/natives/osx_64/: libfvad-jni.dylib
fvad/src/main/scala/ru/kryptonite/audio/fvad/: FVad.scala  FVadJni.scala
fvad/src/main/scala/ru/kryptonite/audio/fvad/process/: FVadProcessor.scala  InterpolatingFVadProcessor.scala  VadProcessor.scala
fvad/src/test/scala/ru/kryptonite/audio/fvad/: FVadSpec.scala
fvad/src/test/scala/ru/kryptonite/audio/fvad/process/: VadProcessorSpec.scala
project/: Dependencies.scala  ProjectKeys.scala  Release.scala  plugins.sbt
tools/src/main/resources/: logback.xml
tools/src/main/scala/ru/kryptonite/audio/tools/: AudioConverterApp.scala
(+5 files in other folders)
